[package]
name = "flashloan-rs"
version = "0.1.0"
edition = "2021"
authors = ["asnared <https://github.com/abigger87>"]
description = "Minimal Multicall3 Flashloan Module"
repository = "https://github.com/whitenois3/flashloan-rs"
license = "MIT"
keywords = ["Rust", "Ethereum", "Arbitrage", "Flashloan"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.82", features = [ "raw_value" ] }
thiserror = "1.0.31"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
ethers = { version = "0.17.0", features = [ "abigen" ] }
eyre = { version = "0.6" }
hex = "0.4.3"
rlp = { version = "0.5.1", default-features = false }
tracing = "0.1.36"
futures = "0.3.23"
anyhow = "1.0.65"

[dev-dependencies]
tracing-test = "0.2.3"
tokio = { version = "1.0.1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "pure_arb"
path = "examples/pure_arb.rs"
